solved section one alignment

--- a/index.css
+++ b/index.css
@@ -20,3 +20,6 @@
     padding: 0px .5em;
 }
 
+.recentNews p {
+    color: black;
+}
